# cbl-workflow

./: .cspell.json  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: build.yml
tmp/: lebanon.py  santa-monica-2.py  santa-monica.py
tmp/data/: OUO_Santa Monica All.xlsx  Santa Monica Covered Buildings with CoStar.xlsx  Santa Monica Covered Buildings with Missing Data.xlsx  Santa Monica Covered Buildings.csv  Santa Monica Covered Buildings.xlsx
tmp/lebanon_data/: FootprintsUNH.sbn  FootprintsUNH.sbx  FootprintsUNH.shp  FootprintsUNH.shp.xml  FootprintsUNH.shx
utils/: __init__.py  chunk.py  common.py  flatten.py  geocode_addresses.py  geojson_helpers.py  normalize_address.py  open_street_map.py  shp_to_geojson.py  ubid.py  update_dataset_links.py  update_quadkeys.py
