[tool.poetry]
name = "cbl-workflow"
version = "0.1.0"
description = ""
authors = ["Alex Swindler <alex.swinder@nrel.gov>", "Nicholas Long <nicholas.long@nrel.gov>"]
readme = "README.md"
# should probably rename utils to cbl_workflow, then place
# the utils in that folder.
packages = [{include = "utils"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"

pnnl-buildingid = {git = "ssh://git@github.com/seed-platform/buildingid.git", rev = "master"}
usaddress = "0.5.11"
street-address = "0.4.0"
geopandas = "^1.0.1"
mercantile = "^1.2.1"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
shapely = "^2.0.6"
setuptools = "^75.8.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
# Need to provide the build system information for the package to be built
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"] # assert statements are allowed in tests, and paths are safe
